--- a/src/index.html
+++ b/src/index.html
@@ -390,7 +390,7 @@
             </div>
             <label class="section__text" for="addressCourier1">Бишкек, улица Табышалиева, 57</label>
           </div>
-          <button class="delete-button"></button>
+          <button class="delete-button delete-button_delivery-popup"></button>
         </div>
         <div class="popup__form-row">
           <div class="popup__address-wrapper">
@@ -400,7 +400,7 @@
             </div>
             <label class="section__text" for="addressCourier2">Бишкек, улица Жукеева-Пудовкина, 77/1</label>
           </div>
-          <button class="delete-button"></button>
+          <button class="delete-button delete-button_delivery-popup"></button>
         </div>
         <div class="popup__form-row">
           <div class="popup__address-wrapper">
@@ -410,7 +410,7 @@
             </div>
             <label class="section__text" for="addressCourier3">Бишкек, микрорайон Джал, улица Ахунбаева Исы, 67/1</label>
           </div>
-          <button class="delete-button"></button>
+          <button class="delete-button delete-button_delivery-popup"></button>
         </div>
         <button class="submit-button submit-button_delivery-popup button" type="submit">Выбрать</button>
       </form>
@@ -430,7 +430,7 @@
               </div>
             </div>
           </div>
-          <button class="delete-button"></button>
+          <button class="delete-button delete-button_delivery-popup"></button>
         </div>
         <div class="popup__form-row">
           <div class="popup__address-wrapper">
@@ -447,7 +447,7 @@
               </div>
             </div>
           </div>
-          <button class="delete-button"></button>
+          <button class="delete-button delete-button_delivery-popup"></button>
         </div>
         <div class="popup__form-row">
           <div class="popup__address-wrapper">
@@ -464,7 +464,7 @@
               </div>
             </div>
           </div>
-          <button class="delete-button"></button>
+          <button class="delete-button delete-button_delivery-popup"></button>
         </div>
         <button class="submit-button submit-button_delivery-popup button" type="submit">Выбрать</button>
       </form>
