feat: DeliveryPopup listeners

--- a/src/index.html
+++ b/src/index.html
@@ -385,7 +385,7 @@
         <div class="popup__form-row">
           <div class="popup__address-wrapper">
             <div class="radio-button">
-              <input class="radio-button__input" type="radio" id="addressCourier1" name="courierAddresses" value="addressCourier1">
+              <input class="radio-button__input" type="radio" id="addressCourier1" name="courierAddresses" value="addressCourier1" checked>
               <span class="radio-button__checkmark"></span>
             </div>
             <label class="section__text" for="addressCourier1">Бишкек, улица Табышалиева, 57</label>
@@ -418,7 +418,7 @@
         <div class="popup__form-row">
           <div class="popup__address-wrapper">
             <div class="radio-button">
-              <input class="radio-button__input" type="radio" id="addressPickup1" name="pickupAddresses" value="addressPickup1">
+              <input class="radio-button__input" type="radio" id="addressPickup1" name="pickupAddresses" value="addressPickup1" checked>
               <span class="radio-button__checkmark"></span>
             </div>
             <div class="popup__label-wrapper">
