feat: CartProductListItem prices functionality

--- a/src/index.html
+++ b/src/index.html
@@ -544,12 +544,28 @@
             <span class="section__subtext section__subtext_grey">сом</span>
             <div class="info-tooltip info-tooltip_discount">
               <div class="info-tooltip__row">
-                <p class="section__subtext section__subtext_grey">Скидка 55%</p>
-                <p class="section__subtext">−300 сом</p>
+                <div class="info-tooltip__span-wrapper">
+                  <span class="section__subtext section__subtext_grey">Скидка</span>
+                  <span class="section__subtext section__subtext_grey section__subtext_padding-left-4 cart-items-list__discount">55</span>
+                  <span class="section__subtext section__subtext_grey">%</span>
+                </div>
+                <div class="info-tooltip__span-wrapper">
+                  <span class="section__subtext">-</span>
+                  <span class="section__subtext cart-items-list__discount-sum">300</span>
+                  <span class="section__subtext section__subtext_padding-left-4">сом</span>
+                </div>
               </div>
               <div class="info-tooltip__row">
-                <p class="section__subtext section__subtext_grey">Скидка покупателя 10%</p>
-                <p class="section__subtext">−30 сом</p>
+                <div class="info-tooltip__span-wrapper">
+                  <span class="section__subtext section__subtext_grey">Скидка покупателя</span>
+                  <span class="section__subtext section__subtext_grey section__subtext_padding-left-4 cart-items-list__user-discount">10</span>
+                  <span class="section__subtext section__subtext_grey">%</span>
+                </div>
+                <div class="info-tooltip__span-wrapper">
+                  <span class="section__subtext">-</span>
+                  <span class="section__subtext cart-items-list__user-discount-sum">30</span>
+                  <span class="section__subtext section__subtext_padding-left-4">сом</span>
+                </div>
               </div>
             </div>
           </div>
