--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
               <div class="cart-contents__wrapper">
                 <div class="cart-contents__title" id="dropdownTitle1">
                   <h2 class="section__subtitle section__subtitle_semibold" id="dropdownTotalQuantity">266</h2>
-                  <h2 class="section__subtitle section__subtitle_semibold">товаров</h2>
+                  <h2 class="section__subtitle section__subtitle_semibold" id="dropdownQuantityHeading">товаров</h2>
                   <h2 class="section__subtitle section__subtitle_semibold">&#183;</h2>
                   <h2 class="section__subtitle section__subtitle_semibold" id="dropdownTotalPrice">2 100 569</h2>
                   <h2 class="section__subtitle section__subtitle_semibold">сом</h2>
