--- a/src/index.html
+++ b/src/index.html
@@ -71,10 +71,10 @@
                 </div>
                 <div class="cart-contents__select-all-checkbox-wrapper" id="selectAllCheckbox">
                   <div class="checkbox">
-                    <input type="checkbox" class="checkbox__input" id="selectAllGoods" checked>
+                    <input type="checkbox" class="checkbox__input" id="checkboxSelectAllGoods" checked>
                     <span class="checkbox__checkmark"></span>
                   </div>
-                  <label class="section__text" for="selectAllGoods">Выбрать все</label>
+                  <label class="section__text" for="checkboxSelectAllGoods">Выбрать все</label>
                 </div>
                 <button class="dropdown__button button" id="btnDropdown1"></button>
               </div>
