--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title lang="ru">Товары и точка</title>
+  <title lang="ru">Архипова Мария, «Товары и точка»</title>
 </head>
 <body class="page">
   <div class="page__container">
@@ -117,23 +117,11 @@
                   <h3 class="section__subtitle section__subtitle_semibold delivery-method__flex-column">Стоимость доставки</h3>
                   <p class="section__text">Бесплатно</p>
                 </div>
-                <div class="delivery-method__row">
+                <div class="delivery-method__row" id="deliveryRow1">
                   <h3 class="section__subtitle section__subtitle_semibold delivery-method__flex-column">5—6 февраля</h3>
-                  <ul class="delivery-method__goods-photos">
-                    <li class="delivery-method__goods-photo-item">
-                      <img class="delivery-method__goods-photo-img" src="<%=require('./images/tshirt_UZcotton.png')%>" alt="Футболка UZcotton мужская" />
-                    </li>
-                    <li class="delivery-method__goods-photo-item">
-                      <span class="item-count-badge item-count-badge_delivery-method">184</span>
-                      <img class="delivery-method__goods-photo-img" src="<%=require('./images/cardholder.jpg')%>" alt="Футболка UZcotton мужская" />
-                    </li>
-                    <li class="delivery-method__goods-photo-item">
-                      <span class="item-count-badge item-count-badge_delivery-method">2</span>
-                      <img class="delivery-method__goods-photo-img" src="<%=require('./images/faber_castell.jpg')%>" alt="Футболка UZcotton мужская" />
-                    </li>
-                  </ul>
+                  <ul class="delivery-method__goods-photos" id="deliveryProductList1"></ul>
                 </div>
-                <div class="delivery-method__row delivery-method__row_margin">
+                <div class="delivery-method__row delivery-method__row_margin" id="deliveryRow2">
                   <h3 class="section__subtitle section__subtitle_semibold delivery-method__flex-column">7—8 февраля</h3>
                   <ul class="delivery-method__goods-photos">
                     <li class="delivery-method__goods-photo-item">
