--- a/src/index.html
+++ b/src/index.html
@@ -123,12 +123,7 @@
                 </div>
                 <div class="delivery-method__row delivery-method__row_margin" id="deliveryRow2">
                   <h3 class="section__subtitle section__subtitle_semibold delivery-method__flex-column">7—8 февраля</h3>
-                  <ul class="delivery-method__goods-photos">
-                    <li class="delivery-method__goods-photo-item">
-                      <span class="item-count-badge item-count-badge_delivery-method">16</span>
-                      <img class="delivery-method__goods-photo-img" src="<%=require('./images/tshirt_UZcotton.png')%>" alt="Футболка UZcotton мужская" />
-                    </li>
-                  </ul>
+                  <ul class="delivery-method__goods-photos" id="deliveryProductList2"></ul>
                 </div>
                 <div class="delivery-method__free-return-info">
                   <img class="delivery-method__shipping-icon" src="<%=require('./images/free_shipping_icon.svg')%>" alt="Бесплатная доставка при отказе" />
