--- a/src/index.html
+++ b/src/index.html
@@ -232,7 +232,7 @@
             <div class="order-summary__cost-detail-row">
               <div class="order-summary__details-wrapper">
                 <p class="section__text" id="totalQuantity">203</p>
-                <p class="section__text">товара</p>
+                <p class="section__text" id="wordForTotalQuantity">товара</p>
               </div>
               <div class="order-summary__details-wrapper">
                 <p class="section__text" id="totalPriceNoDiscount">2 302 048</p>
